...
                        infoTapped = true
                    }
                }) {
                    Image(systemName: "info.circle")
                        .font(.title3)
                }
                .accessibilityIdentifier("infoScoresButton")
            }
            .padding(EdgeInsets(top: 15, leading: 15, bottom: 5, trailing: 15))
            
            InfoRowView(title: "Long Distance",
                        value: String(format: "%.1f", scoreLongDistance),
                        icon: "trophy",
...
                        icon: "medal",
                        isSystemIcon: true,
                        color: AppColors.mainColor,
                        imageValue: false,
                        imageValueString: nil)
        }
        .overlay(Color.clear.accessibilityIdentifier("userScoresView"))
        .padding(.bottom, 7)
        .background(
            RoundedRectangle(cornerRadius: 15)
                .fill(colorScheme == .dark ? AppColors.blockColorDark: Color(uiColor: .systemBackground))
                .shadow(radius: 3, x: 0, y: 3)
        )
        .sheet(isPresented: $infoTapped, onDismiss: {isPresenting = false}) {
            InfoScoresView(isPresented: $infoTapped, isPresenting: $isPresenting)
                .presentationDetents([.fraction(0.80)])
                .presentationCornerRadius(15)
                .overlay(Color.clear.accessibilityIdentifier("infoScoresView"))
        }
        .padding(EdgeInsets(top: 7, leading: 15, bottom: 7, trailing: 15))
    }
}

struct InfoScoresView: View {
...
                isPresenting = false
                isPresented = false
            }) {
                Text("Done")
                    .fontWeight(.bold)
            }
            .accessibilityIdentifier("infoScoresCloseButton")
        }
        .padding(.horizontal)
        .padding(.top)
        
        ScrollView {
            VStack {
...
                """)
                }
                .frame(maxWidth: .infinity, alignment: .leading)
            }
            .padding(.horizontal)
            .padding(.bottom)
            .overlay(Color.clear.accessibilityIdentifier("infoScoresContent"))
        }
    }
}

