...
                                ProgressView()
                                    .padding(.top, 60)
                            }
                            else if !viewModel.longDistanceRanking.isEmpty {
                                // LeaderBoards
                                LeaderboardNavigationView(viewModel: viewModel, navigationPath: $navigationPath, title: "Long Distance", leaderboard: viewModel.longDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: true, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("longDistanceNavigationView"))
                                
                                LeaderboardNavigationView(viewModel: viewModel,navigationPath: $navigationPath, title: "Short Distance", leaderboard: viewModel.shortDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: false, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("shortDistanceNavigationView"))
                            }
                            
                            if viewModel.errorMessage != nil {
...
    var body: some View {
        Text("Ranking")
            .font(.system(size: 32).bold())
            .padding(.vertical)
            .fontWeight(.semibold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("rankingTitle")
    }
}

private struct LeaderboardNavigationView: View {
    @Environment(\.colorScheme) var colorScheme: ColorScheme
    @Environment(\.horizontalSizeClass) var horizontalSizeClass
    @ObservedObject var viewModel: RankingViewModel
    @Binding var navigationPath: NavigationPath
    let title: String
    let leaderboard: [RankingElement]
    var gridItems: [GridItem]
    let leaderboardType: Bool
    @Binding var isPresenting: Bool
    
    var body: some View {
        Button(action: {
...
                            .padding(EdgeInsets(top: 10, leading: 15, bottom: 10, trailing: 15))
                            .foregroundStyle(.white)
                            .background(
                                AppColors.mainColor
                                    .clipShape(TopRoundedCorners(cornerRadius: 10))
                            )
                            .overlay(Color.clear.accessibilityIdentifier("tableHeader"))
                            
                            ForEach(leaderboard.prefix(3).indices, id: \.self) { index in
                                LeaderBoardRow(leaderboard: Array(leaderboard.prefix(3)), leaderBoardSelected: leaderboardType, index: index)
                                    .accessibilityIdentifier("rankingRow_\(index)")
                            }
                            .padding(EdgeInsets(top: 5, leading: 0, bottom: 5, trailing: 0))
...
